# NL2Interface

./: .eslintignore  .gitignore  .gitlab-ci.yml  README.md  package-lock.json  package.json
pi-server/: .gitignore  .zsh_rc  Dockerfile  README.md  RunExp.py  clustering.py  compressdt.py  cost  demo.py  engine.py  experiment.py  generalize.py  mcts.py  pipeline.py  pyproject.toml  requirements.txt  search_difftree.py  search_mapping.py  test.py  transform.py  vegalite.py  wu.db  wudemo.py
pi-server/configs/: agen_config.py  agen_config_miss.py  agen_config_scale.py  miss.txt
pi-server/data/: import.py
pi-server/difftree/: param_difftree.py
pi-server/interface/: interface.py
pi-server/parser2/: DiffSql.g4  DiffSql.interp  DiffSqlLexer.interp  DiffSqlLexer.py  DiffSqlLexer.tokens  DiffSqlParser.py  DiffSql_OLD.g4  Parser.py  README.md  translate.py
pi-server/plots/: plot.py
pi-server/servers/: server.py  server8001.py  server8002.py  server8003.py  server8004.py
pi-server/spec/: connect.json  covid.json  demo.json  explore.json  expr.spec  filter-0.0306859253387541.spec  filter-0.315980596919863.spec  filter.json  overview.json  sales-0.89328524284061.spec  sales-1.spec  sales.json  sdss.json  spec.txt  test.json
pi-server/static/: covid.json  sales.json
pi-server/templates/: covid.html  demo_index.html  index.html  index8001.html  index8004.html  index_covid.html  index_idebench.html  index_sales.html  sales.html  sdss.html  test_vegalite.html  vega-lite.html
pi-server/user_study/: README.md  spec_covid.txt  spec_idebench.txt  spec_sales.txt  (+1 more)
(+106 files in other folders)
