[tool.poetry]
name = "precisioninterfaces"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
wuutils = "^0.0.21"
pandas = "^1.3.4"
Flask = "^2.0.2"
Flask-SocketIO = "^5.1.1"
parsimonious = "^0.8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
